# Azure-AI-Agent

./: .env.sample  .gitignore  README.md  pyproject.toml
notebooks/: 01_AutogenUI(수정필요).ipynb  01_Autogen_Studio.md  01_basic_agent.ipynb  02_MagenticUI(수정필요).txt  02_MagenticUI.ipynb  02_MagenticUI.md  03_Basic Agent.ipynb  03_Basic_Agent.ipynb  03_basic_agent.ipynb  03_memory_agent.ipynb  04_Teams.ipynb  04_memory_agent.ipynb  05_Selector_group_chat.ipynb  05_api_integration.ipynb  05_evaluation.ipynb  06_AutogenUI.ipynb  06_Research.ipynb  06_evaluatio(수정필요).ipynb  06_http_agent.ipynb  07_code_execution.ipynb  07_multi-agent_basic.ipynb  08_MagenticOne.ipynb  08_Multi-Agent(autogen4-sample).ipynb  08_teams.ipynb  09_selector_group_chat.ipynb  09_teams(autogen4-sample).ipynb  10_research.ipynb  10_selector_group_chat(autogen4-sample).ipynb  11_code_execution (수정필요).ipynb  11_research(autogen4-sample).ipynb  12_MagenticOne.ipynb  12_code_execution(autogen4-sample).ipynb  13_MagenticOne.ipynb
