[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-agent-workshop"
version = "1.0.0"
description = "Azure AI Agent Workshop - Multi-Agent Systems with AutoGen"
authors = [
    {name = "Azure AI Workshop", email = "euson@microsoft.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core AI/ML Libraries
    "openai>=1.0.0",
    
    # AutoGen Framework
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext>=0.6.4",
    
    # Environment and Configuration
    "python-dotenv>=1.0.0",
    
    # Web Framework (for HTTP agent examples)
    "flask>=2.3.0",
    
    # Data Processing and Analysis
    "pandas>=2.0.0",
    "numpy",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Web Scraping and HTTP Requests
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    
    # Finance Data (for stock analysis examples)
    "yfinance>=0.2.0",
    
    # Jupyter Notebook Support
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.9.0",
    
    # Additional Utilities
    "tiktoken>=0.5.0",
    "async-timeout>=4.0.0",
    "typing-extensions>=4.7.0",
    
    # Code Execution and Docker Support
    "docker>=6.0.0",
    
    # Search and API Integration
    "serpapi>=0.1.5",
    
    # UI and Console Support
    "rich>=13.0.0",
    
    # MagenticOne Dependencies
    "markitdown>=0.0.1",
    "playwright>=1.40.0",
    "aiofiles>=23.0.0",
    "pillow>=10.0.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/eunjison/Azure-AI-Agent"
Repository = "https://github.com/eunjison/Azure-AI-Agent"
Issues = "https://github.com/eunjison/Azure-AI-Agent/issues"
Documentation = "https://github.com/eunjison/Azure-AI-Agent#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "autogen_agentchat.*",
    "autogen_core.*",
    "autogen_ext.*",
    "serpapi.*",
]
ignore_missing_imports = true