[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-agent-workshop"
version = "1.0.0"
description = "Azure AI Agent Workshop - Multi-Agent Systems with AutoGen"
authors = [{name = "Azure AI Workshop", email = "euson@microsoft.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    # Core
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.5.2", 
    
    # AutoGen Framework
    "autogen-agentchat>=0.6.5",
    "autogen-core>=0.6.5",
    "autogen-ext[docker]>=0.6.5",
    
    # Data Analysis
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.28",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    
    # HTTP and Web
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Jupyter Support
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    
    # MagenticOne Dependencies
    "docker>=7.1.0",
    "asyncio-atexit>=1.0.1",
    "aiohttp>=3.8.0",
    "playwright>=1.47.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

minimal = [
    "autogen-agentchat>=0.6.5",
    "autogen-core>=0.6.5",
    "openai>=1.51.0",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.28",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/eunjison/Azure-AI-Agent"
Repository = "https://github.com/eunjison/Azure-AI-Agent"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
